cminus.output
Terminals unused in grammar

   ENDFILE
   COMMENTERR
   COMMENT
   ERROR


State 57 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier id SEMI
    7                | type_specifier id LBRACKET num RBRACKET SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier id LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier id
   16      | type_specifier id LBRACKET RBRACKET

   17 compound_stmt: LBRACE local_declarations stmt_list RBRACE

   18 local_declarations: local_declarations var_declaration
   19                   | %empty

   20 stmt_list: stmt_list stmt
   21          | %empty

   22 stmt: expressions_stmt
   23     | compound_stmt
   24     | selection_stmt
   25     | iteration_stmt
   26     | return_stmt

   27 expressions_stmt: expression SEMI
   28                 | SEMI

   29 selection_stmt: IF LPAREN expression RPAREN stmt
   30               | IF LPAREN expression RPAREN stmt ELSE stmt

   31 iteration_stmt: WHILE LPAREN expression RPAREN stmt

   32 return_stmt: RETURN SEMI
   33            | RETURN expression

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: id
   37    | id LPAREN expression RPAREN

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 relop: EQ
   41      | LT
   42      | LE
   43      | GT
   44      | GE
   45      | NOTEQ

   46 additive_expression: additive_expression addop term
   47                    | term

   48 addop: PLUS
   49      | MINUS

   50 term: term mulop factor
   51     | factor

   52 mulop: TIMES
   53      | OVER

   54 factor: LPAREN expression RPAREN
   55       | var
   56       | call
   57       | num

   58 num: NUM

   59 id: ID

   60 call: id LPAREN args RPAREN

   61 args: arg_list
   62     | %empty

   63 arg_list: arg_list COMMA expression
   64         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
ELSE (259) 30
INT (260) 8
VOID (261) 9 12
RETURN (262) 32 33
WHILE (263) 31
ID (264) 59
NUM (265) 58
EQ (266) 40
LT (267) 41
LE (268) 42
GT (269) 43
GE (270) 44
NOTEQ (271) 45
ASSIGN (272) 34
PLUS (273) 48
MINUS (274) 49
TIMES (275) 52
OVER (276) 53
SEMI (277) 6 7 27 28 32
COMMA (278) 13 63
LPAREN (279) 10 29 30 31 37 54 60
RPAREN (280) 10 29 30 31 37 54 60
LBRACKET (281) 7 16
RBRACKET (282) 7 16
LBRACE (283) 17
RBRACE (284) 17
ENDFILE (285)
COMMENTERR (286)
COMMENT (287)
ERROR (288)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
program (35)
    on left: 1, on right: 0
declaration_list (36)
    on left: 2 3, on right: 1 2
declaration (37)
    on left: 4 5, on right: 2 3
var_declaration (38)
    on left: 6 7, on right: 4 18
type_specifier (39)
    on left: 8 9, on right: 6 7 10 15 16
fun_declaration (40)
    on left: 10, on right: 5
params (41)
    on left: 11 12, on right: 10
param_list (42)
    on left: 13 14, on right: 11 13
param (43)
    on left: 15 16, on right: 13 14
compound_stmt (44)
    on left: 17, on right: 10 23
local_declarations (45)
    on left: 18 19, on right: 17 18
stmt_list (46)
    on left: 20 21, on right: 17 20
stmt (47)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expressions_stmt (48)
    on left: 27 28, on right: 22
selection_stmt (49)
    on left: 29 30, on right: 24
iteration_stmt (50)
    on left: 31, on right: 25
return_stmt (51)
    on left: 32 33, on right: 26
expression (52)
    on left: 34 35, on right: 27 29 30 31 33 34 37 54 63 64
var (53)
    on left: 36 37, on right: 34 55
simple_expression (54)
    on left: 38 39, on right: 35
relop (55)
    on left: 40 41 42 43 44 45, on right: 38
additive_expression (56)
    on left: 46 47, on right: 38 39 46
addop (57)
    on left: 48 49, on right: 46
term (58)
    on left: 50 51, on right: 46 47 50
mulop (59)
    on left: 52 53, on right: 50
factor (60)
    on left: 54 55 56 57, on right: 50 51
num (61)
    on left: 58, on right: 7 57
id (62)
    on left: 59, on right: 6 7 10 15 16 36 37 60
call (63)
    on left: 60, on right: 56
args (64)
    on left: 61 62, on right: 60
arg_list (65)
    on left: 63 64, on right: 61 63


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LBRACKET num RBRACKET SEMI
   10 fun_declaration: type_specifier . id LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    id  go to state 12


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

   59 id: ID .

    $default  reduce using rule 59 (id)


State 12

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LBRACKET num RBRACKET SEMI
   10 fun_declaration: type_specifier id . LPAREN params RPAREN compound_stmt

    SEMI      shift, and go to state 13
    LPAREN    shift, and go to state 14
    LBRACKET  shift, and go to state 15


State 13

    6 var_declaration: type_specifier id SEMI .

    $default  reduce using rule 6 (var_declaration)


State 14

   10 fun_declaration: type_specifier id LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 15

    7 var_declaration: type_specifier id LBRACKET . num RBRACKET SEMI

    NUM  shift, and go to state 21

    num  go to state 22


State 16

    9 type_specifier: VOID .
   12 params: VOID .

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 17

   15 param: type_specifier . id
   16      | type_specifier . id LBRACKET RBRACKET

    ID  shift, and go to state 11

    id  go to state 23


State 18

   10 fun_declaration: type_specifier id LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 24


State 19

   11 params: param_list .
   13 param_list: param_list . COMMA param

    COMMA  shift, and go to state 25

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 21

   58 num: NUM .

    $default  reduce using rule 58 (num)


State 22

    7 var_declaration: type_specifier id LBRACKET num . RBRACKET SEMI

    RBRACKET  shift, and go to state 26


State 23

   15 param: type_specifier id .
   16      | type_specifier id . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 27

    $default  reduce using rule 15 (param)


State 24

   10 fun_declaration: type_specifier id LPAREN params RPAREN . compound_stmt

    LBRACE  shift, and go to state 28

    compound_stmt  go to state 29


State 25

   13 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 30


State 26

    7 var_declaration: type_specifier id LBRACKET num RBRACKET . SEMI

    SEMI  shift, and go to state 31


State 27

   16 param: type_specifier id LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 32


State 28

   17 compound_stmt: LBRACE . local_declarations stmt_list RBRACE

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 33


State 29

   10 fun_declaration: type_specifier id LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


State 30

   13 param_list: param_list COMMA param .

    $default  reduce using rule 13 (param_list)


State 31

    7 var_declaration: type_specifier id LBRACKET num RBRACKET SEMI .

    $default  reduce using rule 7 (var_declaration)


State 32

   16 param: type_specifier id LBRACKET RBRACKET .

    $default  reduce using rule 16 (param)


State 33

   17 compound_stmt: LBRACE local_declarations . stmt_list RBRACE
   18 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (stmt_list)

    var_declaration  go to state 34
    type_specifier   go to state 35
    stmt_list        go to state 36


State 34

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


State 35

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LBRACKET num RBRACKET SEMI

    ID  shift, and go to state 11

    id  go to state 37


State 36

   17 compound_stmt: LBRACE local_declarations stmt_list . RBRACE
   20 stmt_list: stmt_list . stmt

    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 28
    RBRACE  shift, and go to state 43

    compound_stmt        go to state 44
    stmt                 go to state 45
    expressions_stmt     go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 37

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LBRACKET num RBRACKET SEMI

    SEMI      shift, and go to state 13
    LBRACKET  shift, and go to state 15


State 38

   29 selection_stmt: IF . LPAREN expression RPAREN stmt
   30               | IF . LPAREN expression RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 59


State 39

   32 return_stmt: RETURN . SEMI
   33            | RETURN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    SEMI    shift, and go to state 60
    LPAREN  shift, and go to state 42

    expression           go to state 61
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 40

   31 iteration_stmt: WHILE . LPAREN expression RPAREN stmt

    LPAREN  shift, and go to state 62


State 41

   28 expressions_stmt: SEMI .

    $default  reduce using rule 28 (expressions_stmt)


State 42

   54 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    expression           go to state 63
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 43

   17 compound_stmt: LBRACE local_declarations stmt_list RBRACE .

    $default  reduce using rule 17 (compound_stmt)


State 44

   23 stmt: compound_stmt .

    $default  reduce using rule 23 (stmt)


State 45

   20 stmt_list: stmt_list stmt .

    $default  reduce using rule 20 (stmt_list)


State 46

   22 stmt: expressions_stmt .

    $default  reduce using rule 22 (stmt)


State 47

   24 stmt: selection_stmt .

    $default  reduce using rule 24 (stmt)


State 48

   25 stmt: iteration_stmt .

    $default  reduce using rule 25 (stmt)


State 49

   26 stmt: return_stmt .

    $default  reduce using rule 26 (stmt)


State 50

   27 expressions_stmt: expression . SEMI

    SEMI  shift, and go to state 64


State 51

   34 expression: var . ASSIGN expression
   55 factor: var .

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 55 (factor)


State 52

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


State 53

   38 simple_expression: additive_expression . relop additive_expression
   39                  | additive_expression .
   46 additive_expression: additive_expression . addop term

    EQ     shift, and go to state 66
    LT     shift, and go to state 67
    LE     shift, and go to state 68
    GT     shift, and go to state 69
    GE     shift, and go to state 70
    NOTEQ  shift, and go to state 71
    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 74
    addop  go to state 75


State 54

   47 additive_expression: term .
   50 term: term . mulop factor

    TIMES  shift, and go to state 76
    OVER   shift, and go to state 77

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 78


State 55

   51 term: factor .

    $default  reduce using rule 51 (term)


State 56

   57 factor: num .

    $default  reduce using rule 57 (factor)


State 57

   36 var: id .
   37    | id . LPAREN expression RPAREN
   60 call: id . LPAREN args RPAREN

    LPAREN  shift, and go to state 79

    LPAREN    [reduce using rule 36 (var)]
    $default  reduce using rule 36 (var)


State 58

   56 factor: call .

    $default  reduce using rule 56 (factor)


State 59

   29 selection_stmt: IF LPAREN . expression RPAREN stmt
   30               | IF LPAREN . expression RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    expression           go to state 80
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 60

   32 return_stmt: RETURN SEMI .

    $default  reduce using rule 32 (return_stmt)


State 61

   33 return_stmt: RETURN expression .

    $default  reduce using rule 33 (return_stmt)


State 62

   31 iteration_stmt: WHILE LPAREN . expression RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    expression           go to state 81
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 63

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 82


State 64

   27 expressions_stmt: expression SEMI .

    $default  reduce using rule 27 (expressions_stmt)


State 65

   34 expression: var ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    expression           go to state 83
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 66

   40 relop: EQ .

    $default  reduce using rule 40 (relop)


State 67

   41 relop: LT .

    $default  reduce using rule 41 (relop)


State 68

   42 relop: LE .

    $default  reduce using rule 42 (relop)


State 69

   43 relop: GT .

    $default  reduce using rule 43 (relop)


State 70

   44 relop: GE .

    $default  reduce using rule 44 (relop)


State 71

   45 relop: NOTEQ .

    $default  reduce using rule 45 (relop)


State 72

   48 addop: PLUS .

    $default  reduce using rule 48 (addop)


State 73

   49 addop: MINUS .

    $default  reduce using rule 49 (addop)


State 74

   38 simple_expression: additive_expression relop . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    var                  go to state 84
    additive_expression  go to state 85
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 75

   46 additive_expression: additive_expression addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    var     go to state 84
    term    go to state 86
    factor  go to state 55
    num     go to state 56
    id      go to state 57
    call    go to state 58


State 76

   52 mulop: TIMES .

    $default  reduce using rule 52 (mulop)


State 77

   53 mulop: OVER .

    $default  reduce using rule 53 (mulop)


State 78

   50 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    var     go to state 84
    factor  go to state 87
    num     go to state 56
    id      go to state 57
    call    go to state 58


State 79

   37 var: id LPAREN . expression RPAREN
   60 call: id LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    $default  reduce using rule 62 (args)

    expression           go to state 88
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58
    args                 go to state 89
    arg_list             go to state 90


State 80

   29 selection_stmt: IF LPAREN expression . RPAREN stmt
   30               | IF LPAREN expression . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 91


State 81

   31 iteration_stmt: WHILE LPAREN expression . RPAREN stmt

    RPAREN  shift, and go to state 92


State 82

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 83

   34 expression: var ASSIGN expression .

    $default  reduce using rule 34 (expression)


State 84

   55 factor: var .

    $default  reduce using rule 55 (factor)


State 85

   38 simple_expression: additive_expression relop additive_expression .
   46 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 75


State 86

   46 additive_expression: additive_expression addop term .
   50 term: term . mulop factor

    TIMES  shift, and go to state 76
    OVER   shift, and go to state 77

    $default  reduce using rule 46 (additive_expression)

    mulop  go to state 78


State 87

   50 term: term mulop factor .

    $default  reduce using rule 50 (term)


State 88

   37 var: id LPAREN expression . RPAREN
   64 arg_list: expression .

    RPAREN  shift, and go to state 93

    RPAREN    [reduce using rule 64 (arg_list)]
    $default  reduce using rule 64 (arg_list)


State 89

   60 call: id LPAREN args . RPAREN

    RPAREN  shift, and go to state 94


State 90

   61 args: arg_list .
   63 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 95

    $default  reduce using rule 61 (args)


State 91

   29 selection_stmt: IF LPAREN expression RPAREN . stmt
   30               | IF LPAREN expression RPAREN . stmt ELSE stmt

    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 28

    compound_stmt        go to state 44
    stmt                 go to state 96
    expressions_stmt     go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 92

   31 iteration_stmt: WHILE LPAREN expression RPAREN . stmt

    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 28

    compound_stmt        go to state 44
    stmt                 go to state 97
    expressions_stmt     go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 93

   37 var: id LPAREN expression RPAREN .

    $default  reduce using rule 37 (var)


State 94

   60 call: id LPAREN args RPAREN .

    $default  reduce using rule 60 (call)


State 95

   63 arg_list: arg_list COMMA . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 42

    expression           go to state 98
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 96

   29 selection_stmt: IF LPAREN expression RPAREN stmt .
   30               | IF LPAREN expression RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 99

    $default  reduce using rule 29 (selection_stmt)


State 97

   31 iteration_stmt: WHILE LPAREN expression RPAREN stmt .

    $default  reduce using rule 31 (iteration_stmt)


State 98

   63 arg_list: arg_list COMMA expression .

    $default  reduce using rule 63 (arg_list)


State 99

   30 selection_stmt: IF LPAREN expression RPAREN stmt ELSE . stmt

    IF      shift, and go to state 38
    RETURN  shift, and go to state 39
    WHILE   shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    SEMI    shift, and go to state 41
    LPAREN  shift, and go to state 42
    LBRACE  shift, and go to state 28

    compound_stmt        go to state 44
    stmt                 go to state 100
    expressions_stmt     go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    num                  go to state 56
    id                   go to state 57
    call                 go to state 58


State 100

   30 selection_stmt: IF LPAREN expression RPAREN stmt ELSE stmt .

    $default  reduce using rule 30 (selection_stmt)
